Server-based html generation

--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
-* Генерация HTML-ответа на стороне сервера, а не на стороне клиента (refresh.js)
-* Дать возможность пользователю скачивать CSV-файлы с данными по гетероплазмии
+* Генерация HTML-ответа на стороне сервера, а не на стороне клиента (refresh.js)  <-- (+)
+* Дать возможность пользователю скачивать CSV-файлы с данными по гетероплазмии    <-- (+)
 * Скрипт для автоматического разворачивания всей системы на Debian/Ubuntu и OS X
 * Выделять/подписывать какой файл выбран в данный момент
 * Добавить выравнивание при помощи других алгоритмов (bowtie2 и другие)
